cluster/core/longhorn/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: svc-longhorn-headers
  namespace: longhorn
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
