cluster/core/longhorn/daemonSet.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: longhorn-manager
  name: longhorn-manager
  namespace: longhorn-system
spec:
  selector:
    matchLabels:
      app: longhorn-manager
  template:
    metadata:
      labels:
        app: longhorn-manager
    spec:
      containers:
        - name: longhorn-manager
          image: longhornio/longhorn-manager:v1.2.4
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          command:
            - longhorn-manager
            - -d
            - daemon
            - --engine-image
            - longhornio/longhorn-engine:v1.2.4
            - --instance-manager-image
            - longhornio/longhorn-instance-manager:v1_20220303
            - --share-manager-image
            - longhornio/longhorn-share-manager:v1_20211020
            - --backing-image-manager-image
            - longhornio/backing-image-manager:v2_20210820
            - --manager-image
            - longhornio/longhorn-manager:v1.2.4
            - --service-account
            - longhorn-service-account
          ports:
            - containerPort: 9500
              name: manager
          readinessProbe:
            tcpSocket:
              port: 9500
          volumeMounts:
            - name: dev
              mountPath: /host/dev/
            - name: proc
              mountPath: /host/proc/
            - name: longhorn
              mountPath: /var/lib/longhorn/
              mountPropagation: Bidirectional
            - name: longhorn-default-setting
              mountPath: /var/lib/longhorn-setting/
      volumes:
        - name: dev
          hostPath:
            path: /dev/
        - name: proc
          hostPath:
            path: /proc/
        - name: longhorn
          hostPath:
            path: /var/lib/longhorn/
        - name: longhorn-default-setting
          configMap:
            name: longhorn-default-setting
            # imagePullSecrets:
            #   - name: ""
            # priorityClassName:
            # tolerations:
            #   - key: "key"
            #     operator: "Equal"
            #     value: "value"
            #     effect: "NoSchedule"
            # nodeSelector:
            #   label-key1: "label-value1"
            #   label-key2: "label-value2"
            # serviceAccountName: longhorn-service-account
  updateStrategy:
    rollingUpdate:
      maxUnavailable: "100%"
