cluster/core/longhorn/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: longhorn-ui
  name: longhorn-ui
  namespace: longhorn-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longhorn-ui
  template:
    metadata:
      labels:
        app: longhorn-ui
    spec:
      containers:
        - name: longhorn-ui
          image: longhornio/longhorn-ui:v1.2.4
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx/
            - name: nginx-config
              mountPath: /var/config/nginx/
            - name: var-run
              mountPath: /var/run/
          ports:
            - containerPort: 8000
              name: http
      volumes:
        - emptyDir: {}
          name: nginx-cache
        - emptyDir: {}
          name: nginx-config
        - emptyDir: {}
          name: var-run
          # imagePullSecrets:
          #   - name: ""
          # priorityClassName:
          # tolerations:
          # - key: "key"
          #   operator: "Equal"
          #   value: "value"
          #   effect: "NoSchedule"
          # nodeSelector:
          #   label-key1: "label-value1"
          #   label-key2: "label-value2"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-driver-deployer
  namespace: longhorn-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longhorn-driver-deployer
  template:
    metadata:
      labels:
        app: longhorn-driver-deployer
    spec:
      containers:
        - name: longhorn-driver-deployer
          image: longhornio/longhorn-manager:v1.2.4
          imagePullPolicy: IfNotPresent
          command:
            - longhorn-manager
            - -d
            - deploy-driver
            - --manager-image
            - longhornio/longhorn-manager:v1.2.4
            - --manager-url
            - http://longhorn-backend:9500/v1
      serviceAccountName: longhorn-service-account
      securityContext:
        runAsUser: 0
